--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,5 +17,5 @@ jobs:
         run: ssh-keyscan -p 22 -H ${{ secrets.SSH_HOST }}  >> ~/.ssh/known_hosts
 
       - name: Deploy with rsync
-        run: rsync -avz -e "ssh -p 22" ./ root@${{ secrets.SSH_HOST }}:/var/www
+        run: rsync -avz -e "ssh -p 22" ./dist root@${{ secrets.SSH_HOST }}:/var/www
 
